overlays/uat/probing-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: interop-be-probing-api
  name: interop-be-probing-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: interop-be-probing-api
  strategy: {}
  template:
    metadata:
      labels:
        app: interop-be-probing-api
    spec:
      serviceAccountName: interop-be-probing-api
      containers:
      - image: amazon/aws-xray-daemon:3.3.7
        imagePullPolicy: Always
        name: xray-daemon
        ports:
        - containerPort: 2000
          protocol: UDP
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 50Mi
      - image: ghcr.io/pagopa/interop-be-probing-api:develop
        name: interop-be-probing-api
        resources: {}
        ports: 
          - containerPort: 8080
            name: http
status: {}
